--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url('sd.jpg');
+    background-image: url('IMG_0207.png');
     background-color: black;
     background-color: rgba(0,0,0,0.6);
     background-blend-mode: darken;
